@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.3-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Mon Apr 01 2019 Jim Anderson <thesemicolons@protonmail.com> - 6.1.2-0
 - Moved code for setting chroot directory from manifests/params.pp into data in
   modules
